<?xml version="1.0" encoding="utf-8"?>
<PreferenceScreen xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="match_parent">

    <PreferenceCategory
        android:title="@string/fragment_transmitter_preferences_user_category">

        <EditTextPreference
            android:title="@string/fragment_transmitter_preferences_edit_text_user_name"
            android:key="USER_NAME"
            android:defaultValue=" ">
        </EditTextPreference>

    </PreferenceCategory>

    <PreferenceCategory
        android:title="@string/fragment_transmitter_preferences_server_category">

        <EditTextPreference
            android:title="@string/fragment_transmitter_preferences_edit_text_server_ip"
            android:key="SERVER_IP"
            android:defaultValue="192.168.0.203">
        </EditTextPreference>

        <EditTextPreference
            android:title="@string/fragment_transmitter_preferences_edit_text_server_port"
            android:key="SERVER_PORT"
            android:inputType="number"
            android:defaultValue="8080">
        </EditTextPreference>

        <EditTextPreference
            android:title="@string/fragment_transmitter_preferences_edit_text_websocket_context_path"
            android:key="WS_CONTEXT_PATH"
            android:defaultValue="websocket">
        </EditTextPreference>

    </PreferenceCategory>
</PreferenceScreen>
